--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button id="update">Update</button>
         <button id="delete">Delete</button>
       </form>
-      <!-- <input type="text" class="msg" readonly> -->
+
     </section>
 
     <section class="store">
@@ -45,7 +45,7 @@
 </body>
 
 <footer>
-  <p>© [2025] [Rita Jeveaux]</p>
+  <p>© 2025 Rita Jeveaux</p>
 </footer>
 
 </html>
