--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
   <header>
-    <h1>Fake Store</h1>
+    <div>
+      <h1>Fake Store</h1>
+    </div>
   </header>
 
   <div class="container">
